Allow overflow of app windows (for the menu), fix notepad overflowing

--- a/style/index.css
+++ b/style/index.css
@@ -292,7 +292,6 @@ body {
   height: 100%;
   display: flex;
   flex-direction: column;
-  overflow: hidden;
 }
 .window .header {
   background-color: hsl(0, 0%, 50%);
@@ -379,6 +378,9 @@ body {
 .window .menu .menu-item .index > li.checkmark.enabled:hover::before {
   -webkit-filter: invert(1);
   filter: invert(1);
+}
+.window .body {
+  overflow: hidden;
 }
 /*------------ Taskbar ------------*/
 .taskbar-wrapper {
@@ -815,6 +817,9 @@ body {
   flex: 1;
 }
 .notepad .body > textarea {
+  display: block;
+  font-size: 1em;
+  margin-top: 0.133em;
   width: 100%;
   height: 100%;
   resize: none;
