--- a/style/less/applications.less
+++ b/style/less/applications.less
@@ -90,6 +90,9 @@
     min-height: 0;
     flex: 1;
     > textarea {
+      display: block;
+      font-size: 1em;
+      margin-top: .133em;
       width: 100%;
       height: 100%;
       resize: none;
