--- a/style/less/main.less
+++ b/style/less/main.less
@@ -267,7 +267,6 @@ body {
   height: 100%;
   display: flex;
   flex-direction: column;
-  overflow: hidden;
   .header { //not influencing header-expander
     background-color: @50;
   }
@@ -350,6 +349,9 @@ body {
         }
       }
     }
+  }
+  .body {
+    overflow: hidden;
   }
 }
 
